--- a/Static/index.html
+++ b/Static/index.html
@@ -3,12 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.1.0.js"
         integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="
         crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+        <script src="https://code.angularjs.org/1.5.0/angular-route.js"></script>
+        <script src="content/app.css"</script>
     </head>
     <body ng-app>
-
+        <ng-view><ng-view>
     </body>
 </html>
