created new paths to router, model and controller

--- a/Static/index.html
+++ b/Static/index.html
@@ -20,8 +20,9 @@
 
          <!-- Main Page -->
          <script src='module/mainPage/mainPage.module.js'></script>
-         <!-- <script src="app/landing/config.route.js"></script>
-         <script src="app/landing/landing.controller.js"></script> -->
+         <script src="module/mainPage/mainPage.controller.js"></script>
+         <script src="module/mainPage/config.route.js"></script>
+
 
          <!-- testing -->
          <!-- <script src='app/test/testing.module.js'></script>
