--- a/Static/module/mainPage/mainPage.html
+++ b/Static/module/mainPage/mainPage.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+    <head>
+      <link rel="stylesheet" type="text/css" href="content/app.css">
+
+    </head>
+    <body>
 <div class="header">
 </div>
 
@@ -18,3 +25,4 @@
 <div class="footer">
   <h4> do not feed the trolls</h4>
 </div>
+</body>
