commiting changes in module names

--- a/Static/index.html
+++ b/Static/index.html
@@ -11,28 +11,22 @@
 
     </head>
     <body>
-
-        2 + 2 = {{ 2 + 2}}
         <ng-view><ng-view>
 
-<<<<<<< HEAD
+
           <!-- Main Module -->
           <script src="app.module.js"></script>
 
          <!-- Main Page -->
-         <script src='module/mainPage/mainPage.module.js'></script>
-         <script src="module/mainPage/mainPage.controller.js"></script>
-         <script src="module/mainPage/config.route.js"></script>
+         <script src='modules/mainPage/mainPage.module.js'></script>
+         <script src="modules/mainPage/mainPage.controller.js"></script>
+         <script src="modules/mainPage/config.route.js"></script>
 
-=======
-        <!-- main module -->
-        <script src="app.module.js"></script>
->>>>>>> 0cc8d1ae0107355a7db39dc50f4ccc25e27131aa
 
         <!-- comments -->
-        <script src="modules/comments/comments.module.js"></script>
+        <!-- <script src="modules/comments/comments.module.js"></script>
         <script src="modules/comments/comments.controller.js"></script>
-        <script src="modules/comments/config.route.js"></script>
+        <script src="modules/comments/config.route.js"></script> -->
 
 
     </body>
