get the reply button working

--- a/Static/modules/comments/comments.html
+++ b/Static/modules/comments/comments.html
@@ -1,14 +1,47 @@
-<div>main comment
-    <div class="m-1">
-        <p>reply1</p>
-        <div class="m-1-1">
-            <p>reply1-1</p>
-            <div class="m-1-1-1">
-                <p>reply 1-1-1</P>
+<div class="Pcomment">
+    <p>hello world comment</p>
+    <p id="p" class="p" ng-click="vm.reply($event)">reply</p>
+    
+</div>
+<div class="Pcomment"><p>main comment</p>
+    <div class="c-1 Pcomment">
+        <p class="comments">reply1</p>
+        <div class="c-1-1">
+            <p class="comments">reply1-1</p>
+            <div class="c-1-1-1">
+                <p class="comments">reply 1-1-1</P>
+
             </div>
         </div>
     </div>
-    <div class="m-1">reply2</div>
-    <div class="m-1">reply3</div>
-    <div class="m-1">reply4</div>
+    <div class="c-1 Pcomment"><p class="comments">reply 1-1-1</P>
+        <div class="c-1-1">
+            <p class="comments">reply1-1</p>
+            <div class="c-1-1-1">
+                <p class="comments">reply 1-1-1</P>
+            </div>
+        </div>
+        <div class="c-1-1">
+            <p class="comments">reply1-1</p>
+            <div class="c-1-1-1">
+                <p class="comments">reply 1-1-1</P>
+            </div>
+        </div>
+    </div>
+    <div class="c-1 Pcomment"><p class="comments">reply 1-1-1</P>
+        <div class="c-1-1">
+            <p class="comments">reply1-1</p>
+            <div class="c-1-1-1">
+                <p class="comments">reply 1-1-1</P>
+            </div>
+        </div>
+    </div>
+    <div class="c-1 Pcomment"><p class="comments">reply 1-1-1</P>
+        <div class="c-1-1">
+            <p class="comments">reply1-1</p>
+            <div class="c-1-1-1">
+                <p class="comments">reply 1-1-1</P>
+            </div>
+        </div>
+    </div>
 </div>
