add comment directive and comment constructor

--- a/Static/modules/comments/comments.html
+++ b/Static/modules/comments/comments.html
@@ -1,7 +1,9 @@
+<comment-directive comments =" vm.comments"></comment-directive>
+
+////////////////////
 <div class="Pcomment">
     <p>hello world comment</p>
     <p id="p" class="p" ng-click="vm.reply($event)">reply</p>
-    
 </div>
 <div class="Pcomment"><p>main comment</p>
     <div class="c-1 Pcomment">
