finished rendering ajax and created database

--- a/Static/index.html
+++ b/Static/index.html
@@ -11,11 +11,11 @@
 
     </head>
     <body>
-        <ng-view><ng-view>
+        <ng-view></ng-view>
 
 
           <!-- Main Module -->
-          <script src="app.module.js"></script>
+          <script src="modules/app.module.js"></script>
 
          <!-- Main Page -->
          <script src='modules/mainPage/mainPage.module.js'></script>
