--- a/Static/modules/mainPage/mainPage.html
+++ b/Static/modules/mainPage/mainPage.html
@@ -7,6 +7,14 @@
 
 </div>
 
+<div>
+    <form action="/postLink" id="postLink" method="post">
+        <textarea rows="2" cols="50" id="linkSpot" form="postLink" ng-model="linkSpot"></textarea><br>
+        <textarea rows="4" cols="50" id="description" form="postLink" ng-model="description"></textarea>
+        <button type="button" id="sendMessage" name="postButt" ng-click="clickToPost()"> Post </button>
+    </form>
+</div>
+
 
 <div>
   <ul class="links" ng-repeat="item in links">
