present the comments and reply structure

--- a/Static/index.html
+++ b/Static/index.html
@@ -13,7 +13,7 @@
     <body>
 
         2 + 2 = {{ 2 + 2}}
-        <ng-view><ng-view>
+        <ng-view></ng-view>
 
         <!-- main module -->
         <script src="app.module.js"></script>
@@ -22,6 +22,8 @@
         <script src="modules/comments/comments.module.js"></script>
         <script src="modules/comments/comments.controller.js"></script>
         <script src="modules/comments/config.route.js"></script>
+        <script src="modules/comments/directives/comment.directive.js"></script>
+        <script src="modules/comments/directives/newComment.directive.js"></script>
 
 
     </body>
