--- a/Static/modules/comments/directives/comment.html
+++ b/Static/modules/comments/directives/comment.html
@@ -1,7 +1,34 @@
-<div class="Pcomment" >
+<!-- <div class="comment" >
     <form ng-submit="vm.addComment()">
-        <input ng-model="vm.newComment.content">
-        <p id="p" class="p" ng-click="vm.reply($event)">reply</p>
-        <button type="submit">comment</button>
+        <p>{{comment.content}}</p>
+        <button type="submit" >reply</button>
     </form>
+</div> -->
+
+<!--tree structure -->
+<script type="text/ng-template"  id="x.html">
+    <div>
+        <p>{{data.user}}:  {{data.content}}</p>
+    </div>
+
+    <button ng-click="add(data)">Reply</button>
+    <button ng-click="like(data)">like</button>
+    <ul>
+        <li ng-repeat="data in data.child" ng-include="'x.html'"></li>
+    </ul>
+</script>
+
+<ul ng-app="app" ng-controller="CommentsController">
+    
+    <li ng-repeat="data in tree" ng-include="'x.html'"></li>
+</ul>
+
+<!--comment directive-->
+<div class="comment" ng-repeat="comment in vm.comments track by $id($index)">
+    <p id={{comment.id}} class={{comment.class}}>{{comment.content}}</p>
+    <!-- <div ng-repeat="subComment in comment.child track by $id($index)">
+        <p class={{subComment.class}}>{{subComment.content}}</p>
+    </div> -->
+    <button type="button" ng-click="vm.findComment(vm.comments,$event)" id={{comment.id}}>reply</button>
+    <button type="submit">reply</button>
 </div>
