finished views transfer, parsing urls for http accuracy

--- a/Static/index.html
+++ b/Static/index.html
@@ -22,6 +22,11 @@
          <script src="modules/mainPage/mainPage.controller.js"></script>
          <script src="modules/mainPage/config.route.js"></script>
 
+         <!-- Submit New Links Page -->
+         <script src='modules/newLink/newLinkPage.module.js'></script>
+         <script src="modules/newLink/newLinkPage.controller.js"></script>
+         <script src="modules/newLink/config.route.js"></script>
+
 
         <!-- comments -->
         <!-- <script src="modules/comments/comments.module.js"></script>
