fix a but in index.html and install pg module

--- a/Static/index.html
+++ b/Static/index.html
@@ -11,9 +11,7 @@
 
     </head>
     <body>
-
-        2 + 2 = {{ 2 + 2}}
-        <ng-view><ng-view>
+        <ng-view></ng-view>
 
         <!-- main module -->
         <script src="app.module.js"></script>
@@ -22,7 +20,6 @@
         <script src="modules/comments/comments.module.js"></script>
         <script src="modules/comments/comments.controller.js"></script>
         <script src="modules/comments/config.route.js"></script>
-
 
     </body>
 </html>
