--- a/Static/modules/comments/comments.html
+++ b/Static/modules/comments/comments.html
@@ -1,6 +1,7 @@
 <h1>a link about a super fun thing</h1>
+<!--new comment-->
 
-<new-comment-directive id="comment" comments = "vm.comments"></new-comment-directive>
+
 
 <div class="comments">
     <comment-directive comments ="vm.comments"></comment-directive>
