--- a/Static/modules/comments/directives/newComment.html
+++ b/Static/modules/comments/directives/newComment.html
@@ -1,4 +1,4 @@
-<form id="comment" ng-submit="vm.addComment($event)">
+<form id="comment" ng-submit="vm.addComment($scope)">
     <textarea  ng-model="vm.newComment.content" id="content">new stufff</textarea></br>
     <button type="submit">add comment</button>
 </form>
