--- a/Static/modules/mainPage/mainPage.html
+++ b/Static/modules/mainPage/mainPage.html
@@ -8,13 +8,29 @@
 </div>
 
 <div>
-    <a href="#/newLinkPage" id="linkToPost"> Feel like posting something? </h4>
+    <h4> Feel like Ntrusting us with something? Share something interesting!</h4>
+    <button type="button" id="linkToPost" ng-click="changeView('/newLinkPage')"> Nlighten someone!
+    <!-- <a href="#/newLinkPage"> Feel like posting something? </h4> -->
 </div>
 
 <div>
-  <ul class="links" ng-repeat="item in links">
-    <li> <a href={{item.link}}> {{item.description}} </a>
-  </ul>
+    <div>
+        <ul class="links">
+        <div>
+            <li ng-repeat="item in links">
+                <div>
+                    <img src="/assets/up.jpg" class="up-arr"></img>
+                </div>
+                <div>
+                    <p>10</p>
+                </div>
+                <div> <img src="/assets/down.jpg" class="down-arr"> </img>
+                </div>
+                <span class="oneLink"><a href={{item.link}}> {{item.description}} </a> </span> </li>
+                <button type="button" id="goComment" ng-click="changeView('/comments')">
+        </div>
+</ul>
+</div>
 </div>
 
 
