--- a/Static/modules/mainPage/mainPage.html
+++ b/Static/modules/mainPage/mainPage.html
@@ -26,9 +26,11 @@
                 </div>
                 <div> <img src="/assets/down.jpg" class="down-arr"> </img>
                 </div>
-                <span class="oneLink"><a href={{item.link}}> {{item.description}} </a> </span> </li>
-                <button type="button" id="goComment" ng-click="changeView('/comments')">
-        </div>
+                <span class="oneLink"><a href={{item.link}}> {{item.description}} </a> </span> 
+                <button type="button" id="goComment" ng-click="changeView('/comments')">comments</button>    
+        </li>
+    
+    </div>
 </ul>
 </div>
 </div>
