added button for comment links and html for links themselves

--- a/Static/index.html
+++ b/Static/index.html
@@ -29,9 +29,9 @@
 
 
         <!-- comments -->
-        <!-- <script src="modules/comments/comments.module.js"></script>
+        <script src="modules/comments/comments.module.js"></script>
         <script src="modules/comments/comments.controller.js"></script>
-        <script src="modules/comments/config.route.js"></script> -->
+        <script src="modules/comments/config.route.js"></script>
 
 
     </body>
