--- a/Static/modules/mainPage/mainPage.html
+++ b/Static/modules/mainPage/mainPage.html
@@ -27,7 +27,7 @@
                 <div class="divArrowDown"> <img class="down-arr" src="/assets/down.jpg"> </img>
                 </div>
                 <span class="oneLink"><a href={{item.link}}> {{item.description}} </a> </span>
-                <button type="button" id="goComment" ng-click="changeView('/comments')"> Comment
+                <button type="button" id={{item.id}} ng-click="comments('/comments', item)"> Comment
             </li>
         </div>
 </ul>
