--- a/Static/index.html
+++ b/Static/index.html
@@ -13,7 +13,7 @@
     <body>
         <!-- Navbar       -->
         <div ng-controller="AuthController as vm" id='navbar'>
-            <a type="button" ng-click="vm.logout(vm.user)" ng-hide="vm.isLoggedIn">logout</a>
+            <a type="button" ng-click="vm.logout(vm.user)" ng-hide="vm.isLoggedIn">{{vm.isLoggedIn}}logout</a>
             <a type="button" href="#/login">login</a>
         </div>
         
