fix the indentation in the replies

--- a/Static/modules/comments/comments.html
+++ b/Static/modules/comments/comments.html
@@ -3,7 +3,7 @@
 <script type="text/ng-template"  id="x.html">
 <div class="thing">
     <div id="comment">
-        <p>{{data.id}}:  {{data.content}}</p>
+        <p>{{data.username}}:  {{data.content}}</p>
         <p>{{data.date}}</p>
         <p>{{data.likes - data.disLikes}}</p>
     </div>
