--- a/Static/modules/mainPage/mainPage.html
+++ b/Static/modules/mainPage/mainPage.html
@@ -8,7 +8,7 @@
 
 <div class="welcome">
     <h4> Feel like Ntrusting us with something? Share something interesting!</h4>
-    <button type="button" id="linkToPost" ng-click="changeView('/newLinkPage')"> Nlighten someone!
+    <button class="button" type="button" id="linkToPost" ng-click="changeView('/newLinkPage')"> Nlighten someone!
     <!-- <a href="#/newLinkPage"> Feel like posting something? </h4> -->
 </div>
 
@@ -26,7 +26,7 @@
                 <div class="divArrowDown"> <img class="down-arr" src="/assets/down.jpg"> </img>
                 </div>
                 <span class="oneLink"><a href={{item.link}}> {{item.description}} </a> </span>
-                <button type="button" id={{item.id}} ng-click="comments('/comments', item)"> Comment
+                <button class="button" type="button" id={{item.id}} ng-click="comments('/comments', item)"> Comment
             </li>
         </div>
         </ul>
