--- a/Static/modules/auth/login.html
+++ b/Static/modules/auth/login.html
@@ -1,5 +1,5 @@
 <form id="register" ng-submit="vm.login(vm.user)">
     email:<input type="text" ng-model="vm.user.email" required placeholder="email" autofocus>
     password:<input type="password" ng-model="vm.user.password" required placeholder="password">
-    <button type="submit">login</button>
+    <button class="button" type="submit">login</button>
 </form>
