--- a/Static/modules/newLink/newLinkPage.html
+++ b/Static/modules/newLink/newLinkPage.html
@@ -7,9 +7,9 @@
 
 <div>
     <form action="/postLink" id="postLink" method="post">
-        <textarea rows="2" cols="50" id="linkSpot" form="postLink" ng-model="linkSpot"></textarea><br>
-        <textarea rows="4" cols="50" id="description" form="postLink" ng-model="description"></textarea>
-        <button type="button" id="sendMessage" name="postButt" ng-click="clickToPost()"> Post </button>
+        <textarea rows="2" cols="50" id="linkSpot" form="postLink" ng-model="linkSpot" placeholder="Paste your link here!"></textarea><br>
+        <textarea rows="4" cols="50" id="description" form="postLink" ng-model="description" placeholder="This will be displayed to users"></textarea>
+        <button class="button" type="button" id="sendMessage" name="postButt" ng-click="clickToPost()"> Post </button>
     </form>
 </div>
 
