--- a/Static/index.html
+++ b/Static/index.html
@@ -14,7 +14,7 @@
         <!-- Navbar       -->
         <div ng-controller="AuthController as vm" id='navbar'>
 
-            <a type="button" ng-click="vm.logout(vm.user)" ng-hide="vm.isLoggedIn">{{vm.isLoggedIn}}logout</a>
+            <a type="button" ng-click="vm.logout(vm.user)" ng-hide="vm.isLoggedIn">Logout</a>
             <a type="button" href="#/login">login</a>
             <a type="button" href="#/newLinkPage"> New post
             <a type="button" href="#/">Home</a>
