--- a/Static/modules/auth/register.html
+++ b/Static/modules/auth/register.html
@@ -2,5 +2,5 @@
     name:<input name="user" ng-model="vm.user.user" required autofocus placeholder="name">
     email:<input type="text" ng-model="vm.user.email" required placeholder="email">
     password:<input type="password" ng-model="vm.user.password" required placeholder="password">
-    <button class="button" type="submit">register</button>
+    <button class="button" type="submit">Register</button>
 </form>
