--- a/Static/index.html
+++ b/Static/index.html
@@ -11,13 +11,13 @@
 
     </head>
     <body>
-        <!-- Navbar       -->
+        <!-- Navbar-->
         <div ng-controller="AuthController as vm" id='navbar'>
-            <a type="button" ng-click="vm.logout(vm.user)" ng-hide="vm.isLoggedIn">{{vm.isLoggedIn}}logout</a>
-            <a type="button" href="#/login">login</a>
+            <a type="button" ng-click="vm.logout(vm.user)" ng-show="vm.isLoggedIn()"> logout</a>
+            <a type="button" href="#/login" ng-hide="vm.isLoggedIn()">login</a>
         </div>
         
-        <!--   main view             -->
+        <!--   main view -->
         <ng-view></ng-view>
 
           <!-- Main Module -->
@@ -44,6 +44,7 @@
         <!-- auth module-->
         <script src="modules/auth/auth.module.js"></script>
         <script src="modules/auth/auth.controller.js"></script>
+        <script src="modules/auth/auth.service.js"></script>
         <script src="modules/auth/config.route.js"></script>
         
     </body>
