show link in the comment page

--- a/Static/modules/comments/comments.html
+++ b/Static/modules/comments/comments.html
@@ -1,4 +1,7 @@
-<h1>a link about a super fun thing</h1>
+<!--main link-->
+<div>
+    <span class="oneLink"><a href={{vm.link}}> {{vm.description}} </a> </span>
+</div>
 <!--tree structure -->
 <script type="text/ng-template"  id="x.html">
 <div class="thing">
