--- a/Static/index.html
+++ b/Static/index.html
@@ -13,11 +13,33 @@
     <body>
         <!-- Navbar       -->
         <div ng-controller="AuthController as vm" id='navbar'>
-
-            <a type="button" ng-click="vm.logout(vm.user)" ng-hide="vm.isLoggedIn">Logout</a>
-            <a type="button" href="#/login">login</a>
-            <a type="button" href="#/newLinkPage"> New post
-            <a type="button" href="#/">Home</a>
+                <!-- <div class="logo">
+                  <a src="/assets/up.jpg"> </a>
+                </div> -->
+                <div class="menu-left">
+                  <ul id="menu-principal" class="menu">
+                    <li id="logout" class="">
+                      <a ng-click="vm.logout(vm.user)" ng-hide="vm.isLoggedIn">
+                        Logout
+                    </a>
+                    </li>
+                    <li id="login" class="selected">
+                      <a href="#/login">
+                        Login
+                      </a>
+                      </li>
+                    <li id="newLinkPage" class="">
+                      <a href="#/newLinkPage">
+                        New Post
+                      </a>
+                       </li>
+                    <li id="goHome" class="">
+                       <a href="#/">
+                         Home
+                       </a>
+                       </li>
+                  </ul>
+              </div>
         </div>
 
         <!--   main view             -->
