changed styling for login/register, mainpage and new Link pages

--- a/Static/modules/comments/comments.html
+++ b/Static/modules/comments/comments.html
@@ -1,7 +1,7 @@
 <!--main link-->
 </br>
 <div>
-    <span class="oneLink"><a href={{vm.link}}> {{vm.description}} </a> </span>
+    <span class="links"><a href={{vm.link}}> {{vm.description}} </a> </span>
 </div>
 </br>
 <!--tree structure -->
