--- a/Static/modules/auth/login.html
+++ b/Static/modules/auth/login.html
@@ -1,18 +1,20 @@
-<form id="register" name="authForm" ng-submit="authForm.$valid && vm.login(vm.user)" novalidate>
-    email:<input type="email" name="email" ng-model="vm.user.email" ng-model-options="{ updateOn: 'default blur', debounce: { default: 1000, blur: 0 } }"  required placeholder="email" autofocus>
-    
-    <!--Email error-->
-    <div ng-show="authForm.$submitted">
-        <p clase="error" ng-show="authForm.email.$error.required">Email required</p>
-        <p class="error" ng-show="authForm.email.$error.email">Please enter a valid email.</p>
-    </div>
-    password:<input type="password" name="password" ng-model="vm.user.password" required placeholder="password">
-    
-    <!--Password error-->
-    <div ng-show="authForm.$submitted">
-        <p ng-show="authForm.password.$error.required" class="error">Password required</p>
-    </div>
-    <button class="button" type="submit">login</button>
-    <br>
-     <p class="error" ng-show="vm.error()" ng-bind="vm.error()"></p>
-</form>
+<div id="authSection">
+  <form id="register" name="authForm" ng-submit="authForm.$valid && vm.login(vm.user)" novalidate>
+      <input class="input" type="email" name="email" ng-model="vm.user.email" ng-model-options="{ updateOn: 'default blur', debounce: { default: 1000, blur: 0 } }"  required placeholder="email" autofocus>
+
+      <!--Email error-->
+      <div ng-show="authForm.$submitted">
+          <p class="badInput" class="error" ng-show="authForm.email.$error.required">Email required</p>
+          <p class="badInput" class="error" ng-show="authForm.email.$error.email">Please enter a valid email.</p>
+      </div>
+      <input class="input" type="password" name="password" ng-model="vm.user.password" required placeholder="password">
+
+      <!--Password error-->
+      <div ng-show="authForm.$submitted">
+          <p class="badInput" ng-show="authForm.password.$error.required" class="error">Password required</p>
+      </div>
+      <button id="loginButt" class="button" type="submit">login</button>
+      <br>
+       <p class="badInput" class="error" ng-show="vm.error()" ng-bind="vm.error()"></p>
+  </form>
+</div>
